src/css/style.css
/* ================================= 
  Base Element Styles
==================================== */

* {
	box-sizing: border-box;
}

body {
	font-family: 'Varela Round', sans-serif;
	line-height: 1.6;
	color: #3a3a3a;
	padding-bottom: 89px;
	position: relative;
}

p {
	font-size: .95em;
	margin-bottom: 1.8em;
}

h2,
h3,
a {
	color: #093a58;
}

h2,
h3 {
	margin-top: 0;
}

a {
	text-decoration: none;
}

li {
	list-style-type: none;
}

img {
	max-width: 100%;
}

figure {
	margin: 0;
	line-height: 0;
	position: relative;
}

figcaption {
	font-size: .9em;
	line-height: 1.5;
	color: #fff;
	padding: 1em;	
	background: rgba(19,43,102, .85);
	position: absolute;
	bottom: 0;
	width: 1005；
}

/* ================================= 
  Base Layout Styles
==================================== */

/* ---- Navigation ---- */

.name,
.main-nav {
	text-align: center;
}

.name {
	font-size: 1.25em;
}

.main-nav {
	padding-left: 0;
}

.name a,
.main-nav a {
	text-align: center;
	padding: 10px 15px;
	display: block;
}

.main-nav a {
	font-size: .95em;
	color: #3acec2;
	text-transform: uppercase;
}

.main-nav a:hover {
	color: #093a58;
}

/* ---- Layout Containers ---- */

.banner {
	color: #fff;
	background: #3acec2;
	padding: 50px 0;
	margin-bottom: 60px;
	text-align: center;
}

.col {
	padding-left: 1em;
	padding-right: 1em;
}

.main-footer {
	background: #d9e4ea;
	padding: 2em 0;
	margin-top: 30px;
	text-align: center;
	position: absolute;
	bottom: 0;
	width: 100%;
}

/* ---- Page Elements ---- */

.logo {
	width: 190px;
}

.headline {
	margin-bottom: 0;
}

.icon-location {
	width: 35px;
	position: absolute;
	top: -15px;
	right: -15px;
}


/* ================================= 
  Media Queries
==================================== */

@media (min-width: 769px) {

	body {
		padding-top: 70px;
	}

	.main-header {
		background: white;
		position: fixed;
		top: 0;
		width: 100%;
		box-shadow: 0 1px 10px rgba(0, 0, 0, .4);
	}

	.name {
		float: left;
	}

	.main-nav {
		float: right;
	}

	.main-nav li {
		display: inline-block;
	}

	.container {
		width: 90%;
		margin: 0 auto;
	}

	.col {
		float: left;
		/* padding-right: -5px; */
	}

	.primary,
	.secondary {
		width: 50%;
	}

	/* ---- Float clearfix ---- */

	.clearfix::after {
		content: " ";
		display: table;
		clear: both;
	}

}

@media (min-width: 1025px) {

	.container {
		width: 90%;
		max-width: 1080px;
	}
	.primary,
	.secondary,
	.tertiary {
		width: 33%;
	}
}

